webjars bootstrap css mini laoded properly

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Inventory Homepage</title>
+
+    <link rel="stylesheet"
+          type="text/css"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+
 </head>
 <body>
-    <h1>Welcome to inventory application</h1>
+    <div class="container">
+        <div>
+            <h1>Welcome to inventory application</h1>
+        </div>
+    </div>
 </body>
 </html>
