--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,9 +10,21 @@
 
 </head>
 <body>
-    <div class="container">
+    <div class="container text-center">
         <div>
             <h1>Welcome to inventory application</h1>
+        </div>
+        <div class="p-2">
+            <a class="h2" th:href="@{/categories}">List Categories</a>
+        </div>
+        <div class="p-2">
+            <a class="h2" th:href="@{/categories/new}">Create Category</a>
+        </div>
+        <div class="p-2">
+            <a class="h2" th:href="@{/products}">List Products</a>
+        </div>
+        <div class="p-2">
+            <a class="h2" th:href="@{/products/new}">Create Product</a>
         </div>
     </div>
 </body>
