--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <title>Inventory Homepage</title>
 
+    <!-- link rel="stylesheet"
+          type="text/css"
+          href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" / -->
+
     <link rel="stylesheet"
           type="text/css"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+          th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}" />
 
 </head>
 <body>
