--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Inventory Homepage</title>
-
-    <!-- link rel="stylesheet"
-          type="text/css"
-          href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" / -->
 
     <link rel="stylesheet"
           type="text/css"
