--- a/src/main/resources/templates/category_form.html
+++ b/src/main/resources/templates/category_form.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Create New Category</title>
-
     <link rel="stylesheet"
           type="text/css"
           th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}" />
-
 </head>
 <body>
     <div class="container text-center">
-        <div>
-            <h1>Create New Category</h1>
-        </div>
-
+        <div><h1>Create New Category</h1></div>
+        <!-- -->
         <form th:action="@{/categories/save}"
               th:object="${category}"
               method="post"
