--- a/src/main/resources/templates/product_form.html
+++ b/src/main/resources/templates/product_form.html
@@ -1,26 +1,20 @@
 <!DOCTYPE html>
-<html lang="en"
-      xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Create New Product</title>
-
     <link rel="stylesheet"
           type="text/css"
           th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}" />
-
 </head>
 <body>
     <div class="container text-center">
-        <div>
-            <h1>Create New Product</h1>
-        </div>
-
+        <div><h1>Create New Product</h1></div>
+        <!-- -->
         <form th:action="@{/products/save}"
               th:object="${product}"
               method="post"
               style="max-with: 600px; margin: 0 auto;">
-
             <div class="m-3">
                 <!-- -->
                 <div class="form-group row">
