--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -18,7 +18,7 @@
                         <th>Name</th>
                         <th>Price</th>
                         <th>Category</th>
-                        <th>Edit</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -30,6 +30,8 @@
                             <td>[[${product.category.name}]]</td>
                             <td>
                                 <a th:href="@{'/products/edit/' + ${product.id}}">Edit</a>
+                                &nbsp;
+                                <a th:href="@{'/products/delete/' + ${product.id}}">Delete</a>
                             </td>
                         </tr>
                     </th:block>
