added implementation new brand for existing categories, entity, repo, controlller and the view form

--- a/src/main/resources/templates/categories.html
+++ b/src/main/resources/templates/categories.html
@@ -11,7 +11,7 @@
     <div class="container text-center">
         <div class="h1">Category List</div>
         <div>
-            <table class="table table-bordered">
+            <table class="table table-bordered table-striped">
                 <thead class="thead-dark">
                     <tr>
                         <th>ID</th>
