--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,17 +15,26 @@
         <div>
             <h1>Welcome to inventory application</h1>
         </div>
+        <!-- -->
         <div class="p-2">
             <a class="h2" th:href="@{/categories}">List Categories</a>
         </div>
         <div class="p-2">
             <a class="h2" th:href="@{/categories/new}">Create Category</a>
         </div>
+        <!-- -->
         <div class="p-2">
             <a class="h2" th:href="@{/products}">List Products</a>
         </div>
         <div class="p-2">
             <a class="h2" th:href="@{/products/new}">Create Product</a>
+        </div>
+        <!-- -->
+        <div class="p-2">
+            <a class="h2" th:href="@{/brands}">List Brands</a>
+        </div>
+        <div class="p-2">
+            <a class="h2" th:href="@{/brands/new}">Create Brand</a>
         </div>
     </div>
 </body>
