--- a/src/main/resources/templates/brands.html
+++ b/src/main/resources/templates/brands.html
@@ -17,6 +17,7 @@
                         <th>ID</th>
                         <th>Name</th>
                         <th>Categories</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -25,6 +26,12 @@
                             <td>[[${brand.id}]]</td>
                             <td>[[${brand.name}]]</td>
                             <td>[[${brand.categories}]]</td>
+                            <td>
+                                <a th:href="@{'/brands/edit/' + ${brand.id}}" class="btn btn-primary">Edit</a>
+                                <!-- &nbsp;
+                                <a th:href="@{'/brands/delete/' + ${brand.id}}" class="btn btn-danger">Delete</a>
+                                -->
+                            </td>
                         </tr>
                     </th:block>
                 </tbody>
