added update feature zu product or. product details

--- a/src/main/resources/templates/product_form.html
+++ b/src/main/resources/templates/product_form.html
@@ -45,33 +45,53 @@
                         </select>
                     </div>
                 </div>
-                <!-- -->
-                <div class="form-group row">
+                <!-- create product details case -->
+                <th:block th:if="${product.id == null}">
                     <!-- -->
-                    <label class="col-form-label col-sm-4">Details #1:</label>
-                    <div class="col-sm-4">
-                        <input type="text" name="detailName" placeholder="Name" class="form-control" required />
-                    </div>
-                    <div class="col-sm-4">
-                        <input type="text" name="detailValue" placeholder="Value" class="form-control" required />
-                    </div>
-                    <!-- -->
-                    <label class="col-form-label col-sm-4">Details #2:</label>
-                    <div class="col-sm-4">
-                        <input type="text" name="detailName" placeholder="Name" class="form-control" required />
-                    </div>
-                    <div class="col-sm-4">
-                        <input type="text" name="detailValue" placeholder="Value" class="form-control" required />
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4">Details #1:</label>
+                        <div class="col-sm-4">
+                            <input type="text" name="detailName" placeholder="Name" class="form-control" required />
+                        </div>
+                        <div class="col-sm-4">
+                            <input type="text" name="detailValue" placeholder="Value" class="form-control" required />
+                        </div>
                     </div>
                     <!-- -->
-                    <label class="col-form-label col-sm-4">Details #3:</label>
-                    <div class="col-sm-4">
-                        <input type="text" name="detailName" placeholder="Name" class="form-control" required />
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4">Details #2:</label>
+                        <div class="col-sm-4">
+                            <input type="text" name="detailName" placeholder="Name" class="form-control" required />
+                        </div>
+                        <div class="col-sm-4">
+                            <input type="text" name="detailValue" placeholder="Value" class="form-control" required />
+                        </div>
                     </div>
-                    <div class="col-sm-4">
-                        <input type="text" name="detailValue" placeholder="Value" class="form-control" required />
+                    <!-- -->
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4">Details #3:</label>
+                        <div class="col-sm-4">
+                            <input type="text" name="detailName" placeholder="Name" class="form-control" required />
+                        </div>
+                        <div class="col-sm-4">
+                            <input type="text" name="detailValue" placeholder="Value" class="form-control" required />
+                        </div>
                     </div>
-                </div>
+                </th:block>
+                <!-- update product details case -->
+                <th:block th:unless="${product.id == null}" th:each="detail, status : ${product.details}">
+                    <input type="hidden" name="detailID" th:value="${detail.id}">
+                    <!-- -->
+                    <div class="form-group row">
+                        <label class="col-form-label col-sm-4">Details #[[${status.count}]]:</label>
+                        <div class="col-sm-4">
+                            <input type="text" th:value="${detail.name}" name="detailName" class="form-control" required />
+                        </div>
+                        <div class="col-sm-4">
+                            <input type="text" th:value="${detail.value}" name="detailValue" class="form-control" required />
+                        </div>
+                    </div>
+                </th:block>
                 <!-- -->
                 <div class="text-center p-3">
                     <button type="submit" class="btn btn-primary">Save</button>
