--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -18,6 +18,7 @@
                         <th>Name</th>
                         <th>Price</th>
                         <th>Category</th>
+                        <th>Details</th>
                         <th></th>
                     </tr>
                 </thead>
@@ -28,11 +29,23 @@
                             <td>[[${product.name}]]</td>
                             <td>[[${product.price}]]</td>
                             <td>[[${product.category.name}]]</td>
+                            <td>[[${product.details}]]</td>
                             <td>
+                                <div class="control-group">
+                                    <div class="row">
+                                        <a th:href="@{'/products/edit/' + ${product.id}}">Edit</a>
+                                        &nbsp;
+                                        <a th:href="@{'/products/delete/' + ${product.id}}">Delete</a>
+                                    </div>
+                                </div>
+                            </td>
+                            <!-- class="row controls align-right" -->
+                            <!-- td><div class="control-group"><div class="row">
                                 <a th:href="@{'/products/edit/' + ${product.id}}" class="btn btn-primary">Edit</a>
                                 &nbsp;
                                 <a th:href="@{'/products/delete/' + ${product.id}}" class="btn btn-danger">Delete</a>
-                            </td>
+                                </div></div>
+                            </td -->
                         </tr>
                     </th:block>
                 </tbody>
