--- a/src/main/resources/templates/product/list.html
+++ b/src/main/resources/templates/product/list.html
@@ -51,6 +51,9 @@
                 </tbody>
             </table>
         </div>
+        <div>
+            <a th:href="@{/}">Go Home</a>
+        </div>
     </div>
 </body>
 </html>
