--- a/src/main/resources/templates/category/list.html
+++ b/src/main/resources/templates/category/list.html
@@ -2,40 +2,34 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>List Brands</title>
+    <title>List Categories</title>
     <link rel="stylesheet"
           type="text/css"
           th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}" />
 </head>
 <body>
     <div class="container text-center">
-        <div class="h1">Brand List</div>
+        <div class="h1">Category List</div>
         <div>
             <table class="table table-bordered table-striped">
                 <thead class="thead-dark">
                     <tr>
                         <th>ID</th>
                         <th>Name</th>
-                        <th>Categories</th>
-                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
-                    <th:block th:each="brand : ${listBrands}">
+                    <th:block th:each="category : ${listCategories}">
                         <tr>
-                            <td>[[${brand.id}]]</td>
-                            <td>[[${brand.name}]]</td>
-                            <td>[[${brand.categories}]]</td>
-                            <td>
-                                <a th:href="@{'/brands/edit/' + ${brand.id}}" class="btn btn-primary">Edit</a>
-                                <!-- &nbsp;
-                                <a th:href="@{'/brands/delete/' + ${brand.id}}" class="btn btn-danger">Delete</a>
-                                -->
-                            </td>
+                            <td>[[${category.id}]]</td>
+                            <td>[[${category.name}]]</td>
                         </tr>
                     </th:block>
                 </tbody>
             </table>
+        </div>
+        <div>
+            <a th:href="@{/}">Go Home</a>
         </div>
     </div>
 </body>
