--- a/src/main/resources/templates/category/form.html
+++ b/src/main/resources/templates/category/form.html
@@ -24,6 +24,7 @@
                 </div>
                 <div class="text-center p-3">
                     <button type="submit" class="btn btn-primary">Save</button>
+                    <a th:href="@{/}" class="btn btn-secondary">Cancel</a>
                 </div>
             </div>
         </form>
