--- a/src/main/resources/templates/product/form.html
+++ b/src/main/resources/templates/product/form.html
@@ -95,6 +95,7 @@
                 <!-- -->
                 <div class="text-center p-3">
                     <button type="submit" class="btn btn-primary">Save</button>
+                    <a th:href="@{/}" class="btn btn-secondary">Cancel</a>
                 </div>
             </div>
         </form>
